@@ -14,8 +14,8 @@ subtest 'default' => sub {
 subtest 'an empty string' => sub {
     my $header = tie my %header, 'CGI::Header', ( -target => q{} );
     is $header{Window_Target}, undef;
-    ok !exists $header{Window_Target};
-    is delete $header{Window_Target}, undef; 
+    ok !exists $header->as_hashref->{'Window-Target'};
+    is delete $header{target}, q{}; 
     is_deeply $header->header, {};
 };
 
